// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Radio Disabled not selected Radio 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "color": "#82e616",
      }
    }
  >
    <span
      className="css-9tkvdf-Radio"
      data-testid="radio-input"
    >
      <input
        checked={false}
        className="css-dswabq-Radio"
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        required={false}
        type="radio"
        value="on"
      />
      <span
        className="css-wv0vuq-Radio"
      >
        <span
          className="css-12ho7n7-Radio"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots Design System/Radio Disabled selected Radio 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "color": "#82e616",
      }
    }
  >
    <span
      className="css-9tkvdf-Radio"
      data-testid="radio-input"
    >
      <input
        checked={true}
        className="css-dswabq-Radio"
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        required={false}
        type="radio"
        value="on"
      />
      <span
        className="css-wv0vuq-Radio"
      >
        <span
          className="css-1kmjnpx-Radio"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots Design System/Radio Not selected Radio  (\`checked === undefined\`) 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "color": "#82e616",
      }
    }
  >
    <span
      className="css-nm10z1-Radio"
      data-testid="radio-input"
    >
      <input
        checked={false}
        className="css-dswabq-Radio"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        required={false}
        type="radio"
        value="on"
      />
      <span
        className="css-wv0vuq-Radio"
      >
        <span
          className="css-jn103f-Radio"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots Design System/Radio Not selected Radio (\`checked === false\`) 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "color": "#82e616",
      }
    }
  >
    <span
      className="css-nm10z1-Radio"
      data-testid="radio-input"
    >
      <input
        checked={false}
        className="css-dswabq-Radio"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        required={false}
        type="radio"
        value="on"
      />
      <span
        className="css-wv0vuq-Radio"
      >
        <span
          className="css-jn103f-Radio"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots Design System/Radio Radio showcase 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "color": "#82e616",
      }
    }
  >
    <div>
      <span
        className="css-nm10z1-Radio"
        data-testid="radio-input"
      >
        <input
          checked={false}
          className="css-dswabq-Radio"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          required={false}
          type="radio"
          value="a"
        />
        <span
          className="css-wv0vuq-Radio"
        >
          <span
            className="css-jn103f-Radio"
          />
        </span>
      </span>
      <span
        className="css-nm10z1-Radio"
        data-testid="radio-input"
      >
        <input
          checked={true}
          className="css-dswabq-Radio"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          required={false}
          type="radio"
          value="b"
        />
        <span
          className="css-wv0vuq-Radio"
        >
          <span
            className="css-ti5n2x-Radio"
          />
        </span>
      </span>
      <span
        className="css-9tkvdf-Radio"
        data-testid="radio-input"
      >
        <input
          checked={false}
          className="css-dswabq-Radio"
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          required={false}
          type="radio"
          value="e"
        />
        <span
          className="css-wv0vuq-Radio"
        >
          <span
            className="css-12ho7n7-Radio"
          />
        </span>
      </span>
      <span
        className="css-9tkvdf-Radio"
        data-testid="radio-input"
      >
        <input
          checked={true}
          className="css-dswabq-Radio"
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          required={false}
          type="radio"
          value="f"
        />
        <span
          className="css-wv0vuq-Radio"
        >
          <span
            className="css-1kmjnpx-Radio"
          />
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Radio Selected Radio 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "color": "#82e616",
      }
    }
  >
    <span
      className="css-nm10z1-Radio"
      data-testid="radio-input"
    >
      <input
        checked={true}
        className="css-dswabq-Radio"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        required={false}
        type="radio"
        value="on"
      />
      <span
        className="css-wv0vuq-Radio"
      >
        <span
          className="css-ti5n2x-Radio"
        />
      </span>
    </span>
  </div>
</div>
`;
